# scau-connect

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yaml  pyproject.toml  scau-connect.spec
.github/workflows/: release.yml
doc/: 与zju-connect的差异.md  实现原理.md
src/scau_connect/: __init__.py  __main__.py  cli.py  config.py  main.py  session.py
src/scau_connect/protocol/: __init__.py  atrust.py  base.py
src/scau_connect/protocol/auth/: __init__.py  base.py  cas.py
src/scau_connect/protocol/tunnel/: __init__.py  crypto.py  dialer.py  l3.py  packet.py  resource_parser.py  tcp_tunnel_dialer.py
src/scau_connect/proxy/: __init__.py  base.py  certificates.py  http.py  session_manager.py  socks5.py  web_proxy_dialer.py
src/scau_connect/utils/: __init__.py  crypto.py  http_client.py  logger.py
tests/: __init__.py  test_config.py  test_tcp_tunnel_reader.py  test_tunnel.py
