[project]
name = "scau-connect"
version = "0.1.0"
description = "SCAU aTrust CAS认证转本地代理端口"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "typer>=0.12.0",
    "websockets>=12.0",
    "selenium>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
scau-connect = "scau_connect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scau_connect"]

[tool.ruff]
line-length = 100
target-version = "py310"
